--- a/style.css
+++ b/style.css
@@ -148,12 +148,12 @@ footer {
   margin-right: 3%;
 }
 
-hr {
-  margin-left: 5%;
-  margin-right: 8%;
-  margin-top: 5%;
-  text-decoration: none;
-  color: var(--very-dark-blue);
+.hr {
+  height: 0.2%;
+  width: 92%;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 6% auto;
+  border-radius: 100px;
 }
 
 .author {
